--- a/app.json
+++ b/app.json
@@ -100,7 +100,7 @@
     {
       "desc": "Put yes to allow the bot to chat with people who text you or put no if you don't want the bot to chat with people",
       "required": false, 
-       "value": "no" 
+       "value": "yes" 
     }, 
   "STARTING_BOT_MESSAGE":
   {
@@ -110,7 +110,7 @@
   },
   "PRESENCE":{
     "description":"Put online to indicate that you are ever online even if you are not. Put typing to indicate that you are currently typing a message. Put recording to indicate that you are currently recording an audio. Or leave the field blank to indicate your real state.",
-    "value":"online",
+    "value":"online","recording"
     "required": false
   }  
   },
